# cpp-ray-tracer

./: .gitignore  CMakeLists.txt  README.md  build.bat  run.bat
src/: main.cc  rtweekend.h
src/cpu/: main.cc  rtweekend.h
src/cpu/objects/: hittable.h  sphere.h
src/cpu/primitives/: ray.h
src/cpu/types/: color.h
src/cuda/: main.cu
src/cuda/objects/: bvh.h  hittable.h  hittable_list.h  sphere.h
src/cuda/primitives/: aabb.h  camera.h  ray.h
src/cuda/primitives/materials/: material.h
src/cuda/primitives/textures/: perlin.h  texture.h
src/cuda/types/: color.h  vec3.h
src/cuda/utils/: rtw_stb_image.h
src/objects/: hittable.h  hittable_list.h  sphere.h
src/primitives/: camera.h
src/primitives/materials/: material.h
src/types/: color.h  vec3.h
src/utils/: interval.h
